--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
 	"name": "zustand-easy-state",
 	"private": false,
-	"description": "Abstraer una lógica compleja y en tan solo 1 linea de código crear un estado en TS y con SSR.",
+	"description": "Abstraer una lógica compleja y en tan solo 1 linea de código crear un estado en TS y con SSR, también soporte para compatir estado entre micro frontends",
 	"license": "MIT",
-	"version": "1.0.0",
+	"version": "1.2.1",
 	"type": "module",
 	"main": "dist/main.cjs",
 	"module": "dist/main.mjs",
@@ -62,10 +62,10 @@
 	},
 	"dependencies": {
 		"deep-object-diff": "^1.1.9",
-		"immer": "^10.0.4",
+		"immer": "^10.1.1",
 		"react-secure-storage": "^1.3.2",
-		"react-tracked": "^1.7.14",
-		"scheduler": "^0.23.0",
+		"react-tracked": "^2.0.1",
+		"scheduler": "^0.23.2",
 		"zustand": "^4.5.2"
 	}
 }
